# libusbcan

./: .gitignore  CMakeLists.txt  Makefile  README.md  usbcan.c
include/: can_compat.h  ginkgo.h  usbcan.h
lib/macos/: libGinkgo_Driver.dylib
src/: usbcan.c
utils/: getopt.c  usbcandump.c  usbcanflood.c
